#278 - add files open file button

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -103,9 +103,9 @@ action_open_uploads_information.description=Show details of recent file uploads
 action_open_uploads_information.key=U
 action_open_uploads_information.name=Uploads
 
-action_open_download.description=Open downloaded file
-action_open_download.key=O
-action_open_download.name=Open
+action_open_file.description=Open file
+action_open_file.key=O
+action_open_file.name=Open
 
 action_new_folder.description=Create a new folder
 action_new_folder.key=N
