--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -31,85 +31,49 @@ action_add_friend.description=Add computer to friend list
 action_add_friend.key=F
 action_add_friend.name=Add
 
+action_add_ignore.description=Add a pattern to the ignore list
+action_add_ignore.key=A
+action_add_ignore.name=Add
+
 action_ask_for_friendship.description=Ask for friendship
 action_ask_for_friendship.key=A
 action_ask_for_friendship.name=Ask
-
-action_edit_transfer_mode.description=Edit this transfer mode
-action_edit_transfer_mode.key=E
-action_edit_transfer_mode.name=Edit
-
-action_delete_transfer_mode.description=Delete this transfer mode
-action_delete_transfer_mode.key=D
-action_delete_transfer_mode.name=Delete
-
-action_clear_completed_uploads.description=Clear the list of the recently completed uploads (Alt-3)
-action_clear_completed_uploads.key=C
-action_clear_completed_uploads.name=Cleanup
 
 action_clear_completed_downloads.description=Clear the list of the recently completed downloads (Alt-3)
 action_clear_completed_downloads.key=C
 action_clear_completed_downloads.name=Cleanup
 
-action_create_transfer_mode.description=Create a custom transfer mode
-action_create_transfer_mode.key=C
-action_create_transfer_mode.name=Create
-
-action_details.description=Display the details panel
-action_details.key=D
-action_details.name=Details
-
-action_add_ignore.description=Add a pattern to the ignore list
-action_add_ignore.key=A
-action_add_ignore.name=Add
-
-action_edit_ignore.description=Edit a pattern in the ignore list
-action_edit_ignore.key=E
-action_edit_ignore.name=Edit
-
-action_remove_ignore.description=Remove a pattern from the ignore list
-action_remove_ignore.key=R
-action_remove_ignore.name=Remove
-
-action_remove_friend.description=Remove computer from friend list
-action_remove_friend.key=R
-action_remove_friend.name=Remove
+action_clear_completed_uploads.description=Clear the list of the recently completed uploads (Alt-3)
+action_clear_completed_uploads.key=C
+action_clear_completed_uploads.name=Cleanup
 
 action_connect.description=Manually connect to a PowerFolder computer
 action_connect.key=C
 action_connect.name=Connect
 
-action_open_about_box.description=Show information about PowerFolder
-action_open_about_box.key=A
-action_open_about_box.name=About
+action_create_transfer_mode.description=Create a custom transfer mode
+action_create_transfer_mode.key=C
+action_create_transfer_mode.name=Create
 
-action_open_invitation_received_wizard.description=Open invitation received wizard
-action_open_invitation_received_wizard.key=I
-action_open_invitation_received_wizard.name=Invitation
+action_delete_transfer_mode.description=Delete this transfer mode
+action_delete_transfer_mode.key=D
+action_delete_transfer_mode.name=Delete
 
-action_open_chat.description=Open a chat session with this computer
-action_open_chat.key=C
-action_open_chat.name=Chat
+action_details.description=Display the details panel
+action_details.key=D
+action_details.name=Details
 
-action_open_downloads_information.description=Show details of recent file downloads
-action_open_downloads_information.key=D
-action_open_downloads_information.name=Downloads
+action_download_file.description=Download file
+action_download_file.key=D
+action_download_file.name=Download
 
-action_open_preferences.key=P
-action_open_preferences.name=Preferences
-action_open_preferences.description=Open the preferences dialog
+action_edit_ignore.description=Edit a pattern in the ignore list
+action_edit_ignore.key=E
+action_edit_ignore.name=Edit
 
-action_open_uploads_information.description=Show details of recent file uploads
-action_open_uploads_information.key=U
-action_open_uploads_information.name=Uploads
-
-action_open_file.description=Open file
-action_open_file.key=O
-action_open_file.name=Open
-
-action_new_folder.description=Create a new folder
-action_new_folder.key=N
-action_new_folder.name=New Folder
+action_edit_transfer_mode.description=Edit this transfer mode
+action_edit_transfer_mode.key=E
+action_edit_transfer_mode.name=Edit
 
 action_find_computers.description=Search for other computers
 action_find_computers.key=F
@@ -123,29 +87,69 @@ action_invite_friend.description=Invite a friend to join this folder
 action_invite_friend.key=I
 action_invite_friend.name=Invite
 
-action_search_computer.description=Search for a computer
-action_search_computer.key=S
-action_search_computer.name=Search
+action_new_folder.description=Create a new folder
+action_new_folder.key=N
+action_new_folder.name=New Folder
 
-action_open_settings_information.description=Open settings information for this folder
-action_open_settings_information.key=S
-action_open_settings_information.name=Settings
+action_open_about_box.description=Show information about PowerFolder
+action_open_about_box.key=A
+action_open_about_box.name=About
+
+action_open_chat.description=Open a chat session with this computer
+action_open_chat.key=C
+action_open_chat.name=Chat
+
+action_open_downloads_information.description=Show details of recent file downloads
+action_open_downloads_information.key=D
+action_open_downloads_information.name=Downloads
+
+action_open_file.description=Open file
+action_open_file.key=O
+action_open_file.name=Open
 
 action_open_files_information.description=Open files information for this folder
 action_open_files_information.key=S
 action_open_files_information.name=Files
 
-action_sync_folder.description=Synchronize this folder now
-action_sync_folder.key=S
-action_sync_folder.name=Synchronize
+action_open_invitation_received_wizard.description=Open invitation received wizard
+action_open_invitation_received_wizard.key=I
+action_open_invitation_received_wizard.name=Invitation
 
 action_open_members_information.description=Open members information for this folder
 action_open_members_information.key=M
 action_open_members_information.name=Members
 
+action_open_preferences.description=Open the preferences dialog
+action_open_preferences.key=P
+action_open_preferences.name=Preferences
+
+action_open_settings_information.description=Open settings information for this folder
+action_open_settings_information.key=S
+action_open_settings_information.name=Settings
+
+action_open_uploads_information.description=Show details of recent file uploads
+action_open_uploads_information.key=U
+action_open_uploads_information.name=Uploads
+
 action_reconnect.description=Reconnect to this computer now
 action_reconnect.key=R
 action_reconnect.name=Reconnect
+
+action_remove_friend.description=Remove computer from friend list
+action_remove_friend.key=R
+action_remove_friend.name=Remove
+
+action_remove_ignore.description=Remove a pattern from the ignore list
+action_remove_ignore.key=R
+action_remove_ignore.name=Remove
+
+action_search_computer.description=Search for a computer
+action_search_computer.key=S
+action_search_computer.name=Search
+
+action_sync_folder.description=Synchronize this folder now
+action_sync_folder.key=S
+action_sync_folder.name=Synchronize
 
 ##################
 # Transfer Modes #
@@ -450,8 +454,14 @@ file_details_panel.expected=Expected
 file_details_panel.name=Name
 file_details_panel.modified_date=Modified on
 
-fileinfo.in_recycle_bin=In Recycle Bin
-fileinfo.name=Name
+file_info.in_recycle_bin=In Recycle Bin
+file_info.name=Name
+file_info.deleted=Deleted
+file_info.downloading_from_member=Downloading from {0}
+file_info.expected=Expected
+file_info.ignore=This file is excluded from synchronization
+file_info.new_version_available=New version of file available
+file_info.remote_deleted=Newer version deleted by other user
 
 files_table_model.name=Name
 files_table_model.size=Size
@@ -459,7 +469,7 @@ files_table_model.modified_by=Modified by
 files_table_model.date=Date
 files_table_model.availability=Availability
 
-filelist.name=Name
+file_list.name=Name
 
 filename_problem.dialog.automatic_rename.explained=removes invalid characters and or adds "-1", or similair fixes to create a valid (unique) filename
 filename_problem.dialog.automatic_rename=Automatic rename
