#278 - delete / restore buttons

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -23,6 +23,8 @@ action_open_members_information.icon=icons/NodeFriendConnected.gif
 action_open_preferences.icon=icons/Preferences.png
 action_open_settings_information.icon=icons/Settings.png
 action_reconnect.icon=icons/ConnectBright.png
+action_restore_file.icon=icons/Restore.gif
 action_remove_friend.icon=icons/Minus.png
 action_remove_ignore.icon=icons/Minus.png
 action_sync_folder.icon=icons/Sync.png
+action_delete_file.icon=icons/Delete.gif
