--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -39,11 +39,11 @@ action_ask_for_friendship.description=Ask for friendship
 action_ask_for_friendship.key=A
 action_ask_for_friendship.name=Ask
 
-action_clear_completed_downloads.description=Clear the list of the recently completed downloads (Alt-3)
+action_clear_completed_downloads.description=Clear the list of the recently completed downloads
 action_clear_completed_downloads.key=C
 action_clear_completed_downloads.name=Cleanup
 
-action_clear_completed_uploads.description=Clear the list of the recently completed uploads (Alt-3)
+action_clear_completed_uploads.description=Clear the list of the recently completed uploads
 action_clear_completed_uploads.key=C
 action_clear_completed_uploads.name=Cleanup
 
@@ -54,6 +54,10 @@ action_connect.name=Connect
 action_create_transfer_mode.description=Create a custom transfer mode
 action_create_transfer_mode.key=C
 action_create_transfer_mode.name=Create
+
+action_delete_file.description=Delete file
+action_delete_file.key=D
+action_delete_file.name=Delete
 
 action_delete_transfer_mode.description=Delete this transfer mode
 action_delete_transfer_mode.key=D
@@ -142,6 +146,10 @@ action_remove_friend.name=Remove
 action_remove_ignore.description=Remove a pattern from the ignore list
 action_remove_ignore.key=R
 action_remove_ignore.name=Remove
+
+action_restore_file.description=Undelete file
+action_restore_file.key=R
+action_restore_file.name=Restore
 
 action_search_computer.description=Search for a computer
 action_search_computer.key=S
