#278 - basic delete functions

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -339,6 +339,9 @@ delete_confimation.busy.title=Deleting file(s)
 delete_confimation.text_move_to_recycle_bin_DIR=<DIR>
 delete_confimation.title=Delete files?
 
+delete.busy.description=Moving file from your folder to recycle bin
+delete.busy.title=Deleting file
+
 dialog.ask_for_friendship.button.add=Add to friends
 dialog.ask_for_friendship.question={0} joined one or more PowerFolders\:\n\n{1}\nYou may wish to add him to your friend list.
 dialog.ask_for_friendship.question2={0} has added you to his friend list.\n\nYou may wish to add him to your friend list.
@@ -411,6 +414,9 @@ dialog.user_select.title=Select Users
 downloads_information_card.title=Downloads
 downloads_information_card.auto_cleanup.name=Auto-cleanup
 downloads_information_card.auto_cleanup.description=Clean up any downloads when they complete
+
+download.busy.description=Downloading files from other PowerFolder to your folder
+download.busy.title=Downloading file
 
 empty_recycle_bin.working.description=Deleting files
 empty_recycle_bin.working.title=Emptying the Recycle Bin
@@ -908,6 +914,9 @@ quickinfo.my_folders.powerfolders={0} in {1} PowerFolder(s)
 quickinfo.my_folders.syncing=Synchronizing {0} PowerFolder(s)
 quickinfo.my_folders.title=Status of My PowerFolders
 quickinfo.webservice.folders_mirrored={0} of {1} folders get backed up. {2} online space used.
+
+restore.busy.description=Moving files from the PowerFolder recycle bin to your folder
+restore.busy.title=Restoring file
 
 remove_pattern.dont=Do Not Remove
 remove_pattern.prompt=Pattern '{0}' will be removed.
