--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -1,7 +1,7 @@
 # this file contains the images used in actions
 
 action_abort_download.icon=icons/Abort.gif
-action_add_friend.icon=icons/Plus.png
+action_add_friend.icon=icons/AddFriend.gif
 action_add_ignore.icon=icons/Plus.png
 action_clear_completed_downloads.icon=icons/Clear.gif
 action_clear_completed_uploads.icon=icons/Clear.gif
@@ -24,7 +24,7 @@ action_open_preferences.icon=icons/Preferences.png
 action_open_settings_information.icon=icons/Settings.png
 action_reconnect.icon=icons/ConnectBright.png
 action_restore_file.icon=icons/Restore.gif
-action_remove_friend.icon=icons/Minus.png
+action_remove_friend.icon=icons/RemoveFriend.gif
 action_remove_ignore.icon=icons/Minus.png
 action_sync_folder.icon=icons/Sync.png
 action_delete_file.icon=icons/Delete.gif
