#278 - Remove old actions

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -155,6 +155,10 @@ action_search_computer.description=Search for a computer
 action_search_computer.key=S
 action_search_computer.name=Search
 
+action_sync_all_folders.description=Synchronizes all folders now
+action_sync_all_folders.key=S
+action_sync_all_folders.name=Synchronize
+
 action_sync_folder.description=Synchronize this folder now
 action_sync_folder.key=S
 action_sync_folder.name=Synchronize
@@ -334,11 +338,6 @@ date_format.file_date_hours=HH\:mm
 date_format.full_date=MM/dd/yyyy HH\:mm\:ss
 date_format.time_only_date=[HH\:mm\:ss]
 
-delete_confimation.busy.description=Removing file(s)
-delete_confimation.busy.title=Deleting file(s)
-delete_confimation.text_move_to_recycle_bin_DIR=<DIR>
-delete_confimation.title=Delete files?
-
 delete.busy.description=Moving file from your folder to recycle bin
 delete.busy.title=Deleting file
 
@@ -417,13 +416,6 @@ downloads_information_card.auto_cleanup.description=Clean up any downloads when 
 
 download.busy.description=Downloading files from other PowerFolder to your folder
 download.busy.title=Downloading file
-
-empty_recycle_bin.working.description=Deleting files
-empty_recycle_bin.working.title=Emptying the Recycle Bin
-empty_recycle_bin_confimation.dont=Do Not Empty
-empty_recycle_bin_confimation.empty=Empty
-empty_recycle_bin_confimation.text=PowerFolder Recycle Bin will be emptied.
-empty_recycle_bin_confimation.title=Empty PowerFolder Recycle Bin
 
 estimation.unknown=unknown
 
@@ -676,10 +668,6 @@ general.wednesday=Wednesday
 general.what_is_this=What is this?
 general.yesterday=Yesterday
 
-hide_preview.description=Preview folders will be removed from lists of folders
-hide_preview.key=H
-hide_preview.name=Hide Preview Folders
-
 home_tab.computers=Computer(s)
 home_tab.files_available=File(s) available
 home_tab.files_downloaded=File(s) downloaded
@@ -923,8 +911,6 @@ remove_pattern.prompt=Pattern '{0}' will be removed.
 remove_pattern.remove=Remove
 remove_pattern.title=Remove ignore pattern
 
-scan_all_folders.description=Synchronizes all folders now (F5)
-
 select_invitation.folder_text=Select folder to send invitation for
 select_invitation.message_text=Enter a message for the receiver
 select_invitation.text1=Invitation files are required to join a folder.
@@ -939,10 +925,6 @@ send_invitation.no_users=No users selected
 send_invitation.placetostore=Choose a place to store invitation
 send_invitation.select_user.text=Select user
 send_invitation.subject=Invitation to the PowerFolder '{0}'
-
-show_preview.description=Preview folders will be visible in lists of folders
-show_preview.key=S
-show_preview.name=Show Preview Folders
 
 splash.version=Version {0}
 
