#278 - Display synchronization stats in home tab - not complete yet

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -673,7 +673,9 @@ home_tab.files_available=File(s) available
 home_tab.files_downloaded=File(s) downloaded
 home_tab.files_uploaded=File(s) uploaded
 home_tab.folders=Folder(s)
-home_tab.in_sync=All folders are synchronized.
+home_tab.in_sync=All folders are synchronized
+home_tab.sync_eta=All folders will be synchronized {0}
+home_tab.last_synced=Last synchronized {0}
 home_tab.new_friend_requests=New friend request(s)
 home_tab.new_invitations=New invitation(s)
 home_tab.no_computers=No other computers known
@@ -953,8 +955,8 @@ systray.show=Show
 systray.sync_all=Sync Folders
 systray.tooltip.down.mb=Down {0} MBs
 systray.tooltip.down=Down {0} KBs
-systray.tooltip.in_sync=InSync
-systray.tooltip.syncing=Syncing
+systray.tooltip.in_sync=in sync
+systray.tooltip.syncing=syncing
 systray.tooltip.up.mb=Up {0} MBs
 systray.tooltip.up=Up {0} KBs
 
