--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -842,11 +842,11 @@ preferences.dialog.exit_behavior=Exit behavior
 preferences.dialog.general.title=General
 preferences.dialog.ip_lan_list=LAN IP List
 preferences.dialog.language=Language
-preferences.dialog.lanlinesettings=LAN speed
+preferences.dialog.lan_line_settings=LAN speed
 preferences.dialog.line_settings=Internet speed
 preferences.dialog.network.title=Network
-preferences.dialog.network_mode.lanonly.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
-preferences.dialog.network_mode.lanonly=LAN only
+preferences.dialog.network_mode.lan_only.tooltip=<HTML><BODY>Connect only to PowerFolder clients in the Local Area Network.<BR>The only connection out will be to the update check site.<BR>Your firewall will maybe detect an outgoing connection to 224.0.0.1 or ALL-SYSTEMS.MCAST.NET<BR>We use that to detect the other PowerFolder clients in your LAN.</BODY></HTML>
+preferences.dialog.network_mode.lan_only=LAN only
 preferences.dialog.network_mode.name=Connect to
 preferences.dialog.network_mode.private.tooltip=<HTML><BODY>Enables file transfers over LAN and Internet.<BR>Actually only connects to friends, user on LAN and people, who are on joined folders.<BR>Further PowerFolder connects to supernodes to find your friends in the Internet.</BODY></HTML>
 preferences.dialog.network_mode.private=LAN and Internet
