#278 - ONline storage log in / out actions

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -95,6 +95,14 @@ action_new_folder.description=Create a new folder
 action_new_folder.key=N
 action_new_folder.name=New Folder
 
+action_online_storage_login.description=Log in to Online Storage
+action_online_storage_login.key=L
+action_online_storage_login.name=Log in
+
+action_online_storage_logout.description=Log out of Online Storage
+action_online_storage_logout.key=L
+action_online_storage_logout.name=Log out
+
 action_open_about_box.description=Show information about PowerFolder
 action_open_about_box.key=A
 action_open_about_box.name=About
