#278 - i18n finish panel - os login

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1047,6 +1047,8 @@ wizard.create_folder.title=Creating PowerFolder
 wizard.create_folder.working=Creating PowerFolder, please wait.
 wizard.folder_invitation.intro=You have received an invitation from {0}
 wizard.folder_invitation.title=Folder Invitation
+wizard.finish_panel.os_login_title=Online Storage Login Successful
+wizard.finish_panel.os_login_text=The Online Storage is now correctly setup.\nYou may now start to backup Folders to it.
 wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
 wizard.host_panel.pcs_join=Other computers can join this folder now
 wizard.host_panel.select=Please select the directory which should be the host
