#278 - OS log in / log out

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -796,6 +796,10 @@ online_storage.account_data=Unable to login. Are account details correct?
 online_storage.connecting=Connecting to server
 online_storage.general_error=There was an error logging in\: ({0}).
 
+online_storage_log_out_action.title=Online Storage
+online_storage_log_out_action.message=Are you sure that you want to log out of Online Storage
+online_storage_log_out_action.log_out=Log out
+
 percent.place.holder={0}%
 
 plugin_disable.description=Disable (and stop) Plugin
@@ -805,7 +809,7 @@ plugin_enable.description=Enable (and start) Plugin
 plugin_enable.key=E
 plugin_enable.name=Enable
 
-preferences.dialog.advPort.tooltip=Enter a ","-separated list of ports PowerFolder should listen for connections
+preferences.dialog.advPort.tooltip=Enter a comma-separated list of ports PowerFolder should listen for connections
 preferences.dialog.advPort=Port
 preferences.dialog.advanced.title=Advanced
 preferences.dialog.base_dir=Base directory for folders
