--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -51,6 +51,10 @@ action_connect.description=Manually connect to a PowerFolder computer
 action_connect.key=C
 action_connect.name=Connect
 
+action_configure_folder_online_storage.description=Configure Online Storage for this folder
+action_configure_folder_online_storage.key=C
+action_configure_folder_online_storage.name=Configure
+
 action_create_transfer_mode.description=Create a custom transfer mode
 action_create_transfer_mode.key=C
 action_create_transfer_mode.name=Create
