--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1049,6 +1049,10 @@ wizard.create_folder.title=Creating PowerFolder
 wizard.create_folder.working=Creating PowerFolder, please wait.
 wizard.folder_invitation.intro=You have received an invitation from {0}
 wizard.folder_invitation.title=Folder Invitation
+wizard.folder_online_storage_panel.success_title=Online Storage Setup Successful
+wizard.folder_online_storage_panel.success_message=You successfully setup the Online Storage\nto mirror folder {0}.\n \nPlease keep in mind that the inital backup\nmay take some time on big folders.
+wizard.folder_online_storage_panel.failure_title=Online Storage Setup Error
+wizard.folder_online_storage_panel.failure_message=PowerFolder was unable\nto setup folder {0}.\n \nCause:{1}
 wizard.finish_panel.os_login_title=Online Storage Login Successful
 wizard.finish_panel.os_login_text=The Online Storage is now correctly setup.\nYou may now start to backup Folders to it.
 wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
