#278 - Add / Remove folder to O/S

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1052,10 +1052,12 @@ wizard.create_folder.title=Creating PowerFolder
 wizard.create_folder.working=Creating PowerFolder, please wait.
 wizard.folder_invitation.intro=You have received an invitation from {0}
 wizard.folder_invitation.title=Folder Invitation
-wizard.folder_online_storage_panel.success_title=Online Storage Setup Successful
-wizard.folder_online_storage_panel.success_message=You successfully setup the Online Storage\nto mirror folder {0}.\n \nPlease keep in mind that the inital backup\nmay take some time on big folders.
-wizard.folder_online_storage_panel.failure_title=Online Storage Setup Error
-wizard.folder_online_storage_panel.failure_message=PowerFolder was unable\nto setup folder {0}.\n \nCause:{1}
+wizard.folder_online_storage_panel.backup_success_title=Online Storage Setup Successful
+wizard.folder_online_storage_panel.backup_success_message=Folder {0} was successfully configured for Online Storage mirroring.\n \nPlease keep in mind that the inital backup\nmay take some time on big folders.
+wizard.folder_online_storage_panel.remove_success_title=Online Storage Removal Successful
+wizard.folder_online_storage_panel.remove_success_message=The folder was successfully removed from Online Storage
+wizard.folder_online_storage_panel.failure_title=Online Storage Error
+wizard.folder_online_storage_panel.failure_message=PowerFolder was unable to configure folder {0}.\n \nCause: {1}
 wizard.finish_panel.os_login_title=Online Storage Login Successful
 wizard.finish_panel.os_login_text=The Online Storage is now correctly setup.\nYou may now start to backup Folders to it.
 wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
@@ -1094,7 +1096,8 @@ wizard.sync_pcs_panel.select=Please select the directory which should be synchro
 wizard.webservice.enter_account=Please enter your account details to login to Online Storage
 wizard.webservice.learn_more=What is PowerFolder Online Storage?
 wizard.webservice.login=Online Storage Login
-wizard.webservice.mirror_choose_folder=Choose a folder to be backed up by PowerFolder Online Storage
+wizard.webservice.mirror_folder=Back up this folder by PowerFolder Online Storage
+wizard.webservice.unmirror_folder=Remove this folder from PowerFolder Online Storage
 wizard.webservice.mirror_setup=Backup Folder by Online Storage
 wizard.webservice.password=Password
 wizard.webservice.username=Email
