#278 - Remove confusing 'Cancel' option for 'Finish'-only Wizards

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -1099,6 +1099,7 @@ wizard.webservice.login=Online Storage Login
 wizard.webservice.mirror_folder=Back up this folder by PowerFolder Online Storage
 wizard.webservice.unmirror_folder=Remove this folder from PowerFolder Online Storage
 wizard.webservice.mirror_setup=Backup Folder by Online Storage
+wizard.webservice.unmirror_setup=Remove Folder from Online Storage
 wizard.webservice.password=Password
 wizard.webservice.username=Email
 wizard.what_to_do.backup_folder=Backup a folder
