#278 - local / total folder sizes

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -452,7 +452,8 @@ exp_folder_view.members=Members: {0}
 exp_folder_view.synchronize_folder=Synchronize folder
 exp_folder_view.synchronized={0}% synchronized
 exp_folder_view.transfer_mode=Transfer mode: {0}
-
+exp_folder_view.local={0} local
+exp_folder_view.total={0} total
 file_copier.progress_dialog.text=Copy files...
 file_copier.progress_dialog.title=Copy files progress
 
@@ -1106,6 +1107,5 @@ wizard.what_to_do.backup_folder=Backup a folder
 wizard.what_to_do.custom_sync=Advanced setup
 wizard.what_to_do.host_work=Share/Send a folder
 wizard.what_to_do.load_invite=Open invitation file
-wizard.what_to_do.open_online_documentation=Open online documentation
 wizard.what_to_do.synchronized_folder=Synchronize computer
 wizard.what_to_do.title=What do you want to do?
