--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -454,6 +454,9 @@ exp_folder_view.synchronized={0}% synchronized
 exp_folder_view.transfer_mode=Transfer mode: {0}
 exp_folder_view.local={0} local
 exp_folder_view.total={0} total
+exp_folder_view.recycled={0} file(s) ({1}) in recycle bin
+exp_folder_view.no_recycled=recycle bin not enabled
+
 file_copier.progress_dialog.text=Copy files...
 file_copier.progress_dialog.title=Copy files progress
 
