#278 - recycle bin # / sizes translation

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -455,7 +455,7 @@ exp_folder_view.transfer_mode=Transfer mode: {0}
 exp_folder_view.local={0} local
 exp_folder_view.total={0} total
 exp_folder_view.recycled={0} file(s) ({1}) in recycle bin
-exp_folder_view.no_recycled=recycle bin not enabled
+exp_folder_view.no_recycled=Recycle bin not used
 
 file_copier.progress_dialog.text=Copy files...
 file_copier.progress_dialog.title=Copy files progress
