#278 - bigger OS selector - so you can see what is selected

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -444,11 +444,11 @@ exp_computer_view.node_non_friend_disconnected_text=Disconnected non-friend comp
 
 exp_folder_view.collapse=Collapse folder details
 exp_folder_view.expand=Expand folder details
-exp_folder_view.files=File(s): {0}
+exp_folder_view.files=Files: {0}
 exp_folder_view.files_available={0} file(s) available
 exp_folder_view.folder_local_text=Local folder
 exp_folder_view.folder_preview_text=Preview folder
-exp_folder_view.members=Member(s): {0}
+exp_folder_view.members=Members: {0}
 exp_folder_view.synchronize_folder=Synchronize folder
 exp_folder_view.synchronized={0}% synchronized
 exp_folder_view.transfer_mode=Transfer mode: {0}
@@ -764,6 +764,11 @@ main_tabbed_pane.folders.name=Folders
 main_tabbed_pane.home.description=Over all information about PowerFolder
 main_tabbed_pane.home.key=H
 main_tabbed_pane.home.name=Home
+
+member.me=Me
+member.non_mutual_friend=None mutual friend
+member.onlan=On LAN
+member.supernode=Supernode
 
 mp3_file_info.album=Album
 mp3_file_info.artist=Artist
