#278 - local + online folders displayed with other icon

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -448,6 +448,7 @@ exp_folder_view.files=Files: {0}
 exp_folder_view.files_available={0} file(s) available
 exp_folder_view.folder_local_text=Local folder
 exp_folder_view.folder_online_text=Online folder
+exp_folder_view.folder_local_online_text=Local folder, backed up online
 exp_folder_view.folder_preview_text=Preview folder
 exp_folder_view.members=Members: {0}
 exp_folder_view.synchronize_folder=Synchronize folder
