#1352 (Port debug panel) #949 (Support option: Open Log directory / Email logs to support email)

--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -17,6 +17,7 @@ action_invite_friend.icon=icons/Invite.gif
 action_new_folder.icon=icons/NewFolder.png
 action_open_about_box.icon=icons/information.png
 action_open_chat.icon=icons/Chat.gif
+action_open_debug_information.icon=icons/bug.png
 action_open_file.icon=icons/Open.gif
 action_open_files_information.icon=icons/Files.png
 action_open_members_information.icon=icons/NodeFriendConnected.gif
