--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -115,6 +115,10 @@ action_open_chat.description=Open a chat session with this computer
 action_open_chat.key=C
 action_open_chat.name=Chat
 
+action_open_debug_information.description=Open debug information
+action_open_debug_information.key=D
+action_open_debug_information.name=Debug
+
 action_open_downloads_information.description=Show details of recent file downloads
 action_open_downloads_information.key=D
 action_open_downloads_information.name=Downloads
@@ -424,6 +428,8 @@ dialog.update_check.text=A newer version of PowerFolder is available            
 dialog.update_check.title=Newer version available
 dialog.user_select.text=Select users to invite. Hold down Ctrl key to select multiple users.
 dialog.user_select.title=Select Users
+
+debug_information_card.title=Debug
 
 downloads_information_card.title=Downloads
 downloads_information_card.auto_cleanup.name=Auto-cleanup
