Added status for logging in/not logged in

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -707,6 +707,7 @@ home_tab.no_folders=No folders setup
 home_tab.online_storage.account=Account: {0}
 home_tab.online_storage.account_connecting=Account: {0} connecting...
 home_tab.online_storage.account_disabled=Account: {0} disabled
+home_tab.online_storage.account_not_logged_in=Account: {0} logging in...
 home_tab.online_storage.not_setup=No Online Storage account set up
 home_tab.online_storage.remaining={0} day(s) remaining
 home_tab.online_storage.usage=Usage: {0}%
