--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -236,7 +236,7 @@ pro.wizard.activation.choose_key_file=Choose License key file
 pro.wizard.activation.computers_allowed=Computers allowed\:
 pro.wizard.activation.computers_found=Computers found\:
 pro.wizard.activation.confirm_key=Please confirm the following activation data.
-pro.wizard.activation.contact_support=Contact the PowerFolder support
+pro.wizard.activation.contact_support=Contact the support
 pro.wizard.activation.error_invalid_key=Invalid license key
 pro.wizard.activation.error_reading_file=Error while reading license key file
 pro.wizard.activation.error_unable_to_read=Unable to read
@@ -642,6 +642,7 @@ friends_panel.currently_online=Currently online
 friends_panel.n_a=n/a
 friends_panel.unable_to_connect=Currently online (Unable to connect)
 
+general.application.name=PowerFolder
 general.accept=Accept
 general.cancel.key=C
 general.cancel=Cancel
@@ -897,7 +898,7 @@ preferences.dialog.randomPort=Automatically find a port
 preferences.dialog.restart.restart=Restart Now
 preferences.dialog.restart.text=Some changes require PowerFolder to restart.
 preferences.dialog.restart.title=Restart required
-preferences.dialog.server=Online Storage Server
+preferences.dialog.server=Server
 preferences.dialog.show_advanced=Show advanced preferences
 preferences.dialog.show_chat_notifications=Show chat notifications when minimized
 preferences.dialog.show_preview_panel.tooltip=<HTML><BODY>You can find the image preview under My PowerFolders->Folder->Files->Details<BR>(This feature is memory hungry with big jpg's (>500K), use with caution.)</BODY></HTML>
@@ -1111,9 +1112,9 @@ wizard.success_join=You have successfully joined the folder\!
 wizard.sync_pcs_panel.folder_sync_success=You successfully set up a folder mirror\!\n
 wizard.sync_pcs_panel.pcs_join=Other computers can join this folder now
 wizard.sync_pcs_panel.select=Please select the directory which should be synchronized
-wizard.webservice.enter_account=Please enter your account details to login to Online Storage
+wizard.webservice.enter_account=Please enter your account details to login
 wizard.webservice.learn_more=What is PowerFolder Online Storage?
-wizard.webservice.login=Online Storage Login
+wizard.webservice.login=Login
 wizard.webservice.mirror_folder=Back up this folder by PowerFolder Online Storage
 wizard.webservice.unmirror_folder=Remove this folder from PowerFolder Online Storage
 wizard.webservice.mirror_setup=Backup Folder by Online Storage
