#278 - fix missing translation

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -457,7 +457,6 @@ exp_folder_view.folder_online_text=Online folder
 exp_folder_view.folder_local_online_text=Local folder, backed up online
 exp_folder_view.folder_preview_text=Preview folder
 exp_folder_view.members=Members: {0}
-exp_folder_view.synchronize_folder=Synchronize folder
 exp_folder_view.synchronized={0}% synchronized
 exp_folder_view.transfer_mode=Transfer mode: {0}
 exp_folder_view.local={0} local
@@ -1127,3 +1126,4 @@ wizard.what_to_do.host_work=Share/Send a folder
 wizard.what_to_do.load_invite=Open invitation file
 wizard.what_to_do.synchronized_folder=Synchronize computer
 wizard.what_to_do.title=What do you want to do?
+wizard.what_to_do.open_online_documentation=Open online documentation
