#278 - Account link tool tips, no password use case, and remove redundant Log in / Log out link

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -705,10 +705,17 @@ home_tab.new_invitations=New invitation(s)
 home_tab.no_computers=No other computers known
 home_tab.no_folders=No folders setup
 home_tab.online_storage.account=Account: {0}
+home_tab.online_storage.account.tips=Click to change account details
 home_tab.online_storage.account_connecting=Account: {0} connecting...
+home_tab.online_storage.account_connecting.tips=PowerFolder is connecting to this account
 home_tab.online_storage.account_disabled=Account: {0} disabled
+home_tab.online_storage.account_disabled.tips=This account has been disabled
 home_tab.online_storage.account_not_logged_in=Account: {0} logging in...
+home_tab.online_storage.account_not_logged_in.tips=PowerFolder is logging in to this account
 home_tab.online_storage.not_setup=No Online Storage account set up
+home_tab.online_storage.not_setup.tips=Click here to configure account details
+home_tab.online_storage.no_password=Log in to Online Storage
+home_tab.online_storage.no_password.tips=Click here to enter account password
 home_tab.online_storage.remaining={0} day(s) remaining
 home_tab.online_storage.usage=Usage: {0}%
 home_tab.synchronizing=Synchroniation in progress...
@@ -1077,7 +1084,7 @@ wizard.folder_online_storage_panel.remove_success_message=The folder was success
 wizard.folder_online_storage_panel.failure_title=Online Storage Error
 wizard.folder_online_storage_panel.failure_message=PowerFolder was unable to configure folder {0}.\n \nCause: {1}
 wizard.finish_panel.os_login_title=Online Storage Login Successful
-wizard.finish_panel.os_login_text=The Online Storage is now correctly setup.\nYou may now start to backup Folders to it.
+wizard.finish_panel.os_login_text=The Online Storage is now correctly setup.\nYou may now start to backup folders to it.
 wizard.host_panel.folder_host_success=You successfully set up a host folder\!\n
 wizard.host_panel.pcs_join=Other computers can join this folder now
 wizard.host_panel.select=Please select the directory which should be the host
