#278 - online_storage.remaining tips

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -717,6 +717,7 @@ home_tab.online_storage.not_setup.tips=Click here to configure account details
 home_tab.online_storage.no_password=Log in to Online Storage
 home_tab.online_storage.no_password.tips=Click here to enter account password
 home_tab.online_storage.remaining={0} day(s) remaining
+home_tab.online_storage.remaining.tips=Your account will expire in {0} days
 home_tab.online_storage.usage=Usage: {0}%
 home_tab.synchronizing=Synchroniation in progress...
 home_tab.total_bytes=Byte(s) total
