#278 - Enable F5 for sync all folders

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -99,14 +99,6 @@ action_new_folder.description=Create a new folder
 action_new_folder.key=N
 action_new_folder.name=New Folder
 
-action_online_storage_log_in.description=Log in to Online Storage
-action_online_storage_log_in.key=L
-action_online_storage_log_in.name=Log in
-
-action_online_storage_log_out.description=Log out of Online Storage
-action_online_storage_log_out.key=L
-action_online_storage_log_out.name=Log out
-
 action_open_about_box.description=Show information about PowerFolder
 action_open_about_box.key=A
 action_open_about_box.name=About
@@ -171,7 +163,7 @@ action_search_computer.description=Search for a computer
 action_search_computer.key=S
 action_search_computer.name=Search
 
-action_sync_all_folders.description=Synchronizes all folders now
+action_sync_all_folders.description=Synchronizes all folders now (F5)
 action_sync_all_folders.key=S
 action_sync_all_folders.name=Synchronize
 
@@ -822,10 +814,6 @@ online_label.online=Online
 online_storage.account_data=Unable to login. Are account details correct?
 online_storage.connecting=Connecting to server
 online_storage.general_error=There was an error logging in\: ({0}).
-
-online_storage_log_out_action.title=Online Storage
-online_storage_log_out_action.message=Are you sure that you want to log out of Online Storage
-online_storage_log_out_action.log_out=Log out
 
 percent.place.holder={0}%
 
