#278 - Better bytes total line in home tab

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -712,7 +712,7 @@ home_tab.online_storage.remaining={0} day(s) remaining
 home_tab.online_storage.remaining.tips=Your account will expire in {0} days
 home_tab.online_storage.usage=Usage: {0}%
 home_tab.synchronizing=Synchroniation in progress...
-home_tab.total_bytes=Byte(s) total
+home_tab.total={0} total
 home_tab.you_have=You have:
 
 image_file_info.resolution=Resolution
