--- a/src/etc/Icons.properties
+++ b/src/etc/Icons.properties
@@ -5,3 +5,34 @@ about.animation=icons/about/AboutAnimation.gif
 powerfolder32x32.icon=icons/PowerFolder32x32.gif
 splash.icon=icons/Splash.png
 picto.logo.icon=icons/pictos/PowerFolderLogo96x96.png
+
+action_abort_download.icon=icons/Abort.gif
+action_add_friend.icon=icons/AddFriend.gif
+action_add_ignore.icon=icons/Plus.png
+action_clear_completed_downloads.icon=icons/Clear.gif
+action_clear_completed_uploads.icon=icons/Clear.gif
+action_connect.icon=icons/ConnectBright.png
+action_create_transfer_mode.icon=icons/Plus.png
+action_delete_transfer_mode.icon=icons/Minus.png
+action_details.icon=icons/Details.gif
+action_download_file.icon=icons/Download.png
+action_edit_ignore.icon=icons/Edit.png
+action_edit_transfer_mode.icon=icons/Edit.png
+action_find_computers.icon=icons/FindComputers.gif
+action_invite_friend.icon=icons/Invite.gif
+action_new_folder.icon=icons/NewFolder.png
+action_open_about_box.icon=icons/information.png
+action_open_chat.icon=icons/Chat.gif
+action_open_debug_information.icon=icons/bug.png
+action_open_file.icon=icons/Open.gif
+action_open_files_information.icon=icons/Files.png
+action_open_members_information.icon=icons/NodeFriendConnected.gif
+action_open_preferences.icon=icons/Preferences.png
+action_open_settings_information.icon=icons/Settings.png
+action_reconnect.icon=icons/ConnectBright.png
+action_restore_file.icon=icons/Restore.gif
+action_remove_friend.icon=icons/RemoveFriend.gif
+action_remove_ignore.icon=icons/Minus.png
+action_sync_folder.icon=icons/Sync.png
+action_delete_file.icon=icons/Delete.gif
+action_configure_folder_online_storage.icon=icons/PFOnline.png
