#278 - download aborter for files table

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -23,7 +23,7 @@
 # Actions #
 ###########
 
-action_abort_download.description=Abort selected download(s)
+action_abort_download.description=Abort selected download
 action_abort_download.key=A
 action_abort_download.name=Abort
 
