#278 - Show recently downloaded files in bold - fixed.

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -483,6 +483,7 @@ file_info.expected=Expected
 file_info.ignore=This file is excluded from synchronization
 file_info.new_version_available=New version of file available
 file_info.remote_deleted=Newer version deleted by other user
+file_info.recently_downloaded=Recently downloaded
 
 files_table_model.name=Name
 files_table_model.size=Size
