#278 - Unmark file action for files table

--- a/src/etc/Translation.properties
+++ b/src/etc/Translation.properties
@@ -171,6 +171,10 @@ action_sync_folder.description=Synchronize this folder now
 action_sync_folder.key=S
 action_sync_folder.name=Synchronize
 
+action_unmark.description=Unmark as new file (clear from downloads)
+action_unmark.key=U
+action_unmark.name=Unmark
+
 ##################
 # Transfer Modes #
 ##################
@@ -306,7 +310,6 @@ apps.dir.outlook=Outlook
 apps.dir.sunbird=Sunbird
 apps.dir.thunderbird=Thunderbird
 
-chat.notification.member_message=You have received a chat message from {0}.
 chat.notification.message=You have received a chat message.
 chat.notification.title=Chat Message Received
 
